frontend/test/should_pass/exec_014.grg
test tint(var i:int) : (int)
{
    return (i + 4);
}

test tstringint(var s:string, var i:int) : (string)
{
    return (s + i);
}

rule rdoublefloat(var d:double, var f:float) : (double)
{
    modify {
        return (d + 2 * f);
        emit("Double: " + d + " Float: " + f + "\n");
    }
}

rule print(var s:string)
{
    modify {
        emit(s);
    }
}

rule callexec
{
    modify {
        exec(tint(999991) && (i:int)=tint(-90) && (s:string)=tstringint("test", i) && print(s));
        exec((d:double)=rdoublefloat(-3.94955, 2.111f) && rdoublefloat(d, -2.0f));
    }
}
