frontend/test/should_fail/index_isin_edge_return_value_mismatch.grg
#using "index_count_edge_model.gm"

function f(var s:short) : int
{
	return(s);
}

rule i {
	-e:E->;
	
	if{ f(isInEdgesFromIndex(e, fooi)) > 0; }
	
	modify {
	}
}
